Created the content for the Scoopy Cereal website.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,28 +6,20 @@
         <ul>
             <li class="current"><a href="/">HOME</a></li>
             <li class="current"><a href="#about">ABOUT</a></li>
-            <li class="current"><a href="#team">TEAM</a></li>
-            <li class="current"><a href="#games">GAMES</a></li>
+            <li class="current"><a href="#download">DOWNLOAD</a></li>
+            <li class="current"><a href="#features">FEATURES</a></li>
             <li class="current"><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
 
     <!-- Banner -->
-    <section id="banner">
-        <br>
-        <br>
-        {%- if page.banner_image -%}
-            <img src="{{ page.banner_image }}" alt="" title="">
-        {%- endif -%}
+    <section id="banner" style="background-image: url('../images/scoopy_banner.jpg')">
         <div>
-            <header>
-                {%- if page.title -%}
-                    <h2>{{ page.title }}</h2>
-                {%- endif %}
-                {%- if page.subheading -%}
-                    <p>{{ page.subheading }}</p>
-                {%- endif %}
-            </header>
+            <br>
+        </div>
+        <img src="/images/scoopy_logo.png" alt="" title=""/>
+        <div>
+            <br>
         </div>
     </section>
 </section>
