Updated socials links and added promo video.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,10 +4,10 @@
     <!-- Nav -->
     <nav id="nav">
         <ul>
-            <li class="current"><a href="/">HOME</a></li>
             <li class="current"><a href="#about">ABOUT</a></li>
             <li class="current"><a href="#download">DOWNLOAD</a></li>
             <li class="current"><a href="#features">FEATURES</a></li>
+            <li class="current"><a href="#video">VIDEO</a></li>
             <li class="current"><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
