--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,11 +20,14 @@ layout: default
                 </section>
 
                 <section>
-                    <header id="download" class="major">
+                    <header class="major">
+                        <h1 id="download">DOWNLOAD</h1>
                         <header>
                             <div>
-                                <p align="center"><img src="/images/badge-apple.png" style="padding: 20px"><img
-                                        src="/images/badge-google.png" style="padding: 20px"></p>
+                                <p align="center">
+                                    <a href="https://apps.apple.com/us/app/scoopy-cereal/id1441615747"><img src="/images/badge-apple.png" style="padding: 20px"></a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.spudspicer.scoopycereal"><img src="/images/badge-google.png" style="padding: 20px"></a>
+                                </p>
                             </div>
                 </section>
 
@@ -45,6 +48,17 @@ layout: default
                             </ul>
                         </div>
                     </div>
+                </section>
+
+                <section>
+                    <header class="major">
+                        <h1 id="video">VIDEO</h1>
+                        <header>
+                            <div>
+                                <p align="center">
+                                    <iframe width="720" height="405" src="https://www.youtube.com/embed/G3zRiOnrbL4?si=zxWFlWIDLPx6CdlR&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                </p>
+                            </div>
                 </section>
 
                 <section>
@@ -77,14 +91,17 @@ layout: default
                                 <header>
                                     <h1 style="text-transform: uppercase">RELEASE DATE</h1>
                                 </header>
-                                <p>TDB 2024</p>
+                                <p>May 27th 2024</p>
                             </section>
 
                             <section class="box" style="height:200px">
                                 <header>
                                     <h1 style="text-transform: uppercase">Platforms</h1>
                                 </header>
-                                <p>iOS, Google Play</p>
+                                <p>
+                                    <a href="https://apps.apple.com/us/app/scoopy-cereal/id1441615747">iOS</a>
+                                    | 
+                                    <a href="https://play.google.com/store/apps/details?id=com.spudspicer.scoopycereal">Google Play</a>
                             </section>
                         </div>
                         <div style="width:50%">
@@ -100,7 +117,13 @@ layout: default
                                     <h1 style="text-transform: uppercase">SOCIALS</h1>
                                 </header>
                                 <p>
-                                    Facebook | Twitter | Youtube
+                                    <a href="https://www.facebook.com/profile.php?id=61560394523831">Facebook</a>
+                                    | 
+                                    <a href="https://www.instagram.com/scoopycereal">Instagram</a>
+                                    | 
+                                    <a href="https://www.tiktok.com/@scoopycereal">TikTok</a>
+                                    | 
+                                    <a href="https://x.com/ScoopyCereal">X</a>
                                 </p>
                             </section>
 
